@@ -278,3 +278,6 @@
 
  -tdressler Mo May 12 19:00:00 MEST 2008
   - feature : add windows support to M232
+
+-tdressler So May 18 13:30:00 MEST 2008
+  - feature : add ELV IPWE1 support
